deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comics
spec:
  selector:
    app: comics
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
